--- a/src/main/java/Image_Synthesizer.form
+++ b/src/main/java/Image_Synthesizer.form
@@ -547,14 +547,105 @@
               </grid>
             </children>
           </grid>
-          <grid id="13c39" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="13c39" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Primitives"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <grid id="6b16e" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="6d286" class="javax.swing.JButton" default-binding="true">
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Generate"/>
+                    </properties>
+                  </component>
+                  <component id="bc293" class="javax.swing.JButton" default-binding="true">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Update Preview"/>
+                    </properties>
+                  </component>
+                  <hspacer id="782ca">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
+                </children>
+              </grid>
+              <component id="d5a4e" class="javax.swing.JTextArea" binding="primitveTextArea">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <toolbar id="875ad">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <borderPainted value="false"/>
+                  <opaque value="true"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <hspacer id="8b5de">
+                    <constraints/>
+                  </hspacer>
+                  <component id="eb901" class="javax.swing.JLabel">
+                    <constraints/>
+                    <properties>
+                      <text value="Presets"/>
+                    </properties>
+                  </component>
+                  <component id="b74e0" class="javax.swing.JComboBox">
+                    <constraints/>
+                    <properties>
+                      <minimumSize width="150" height="26"/>
+                    </properties>
+                  </component>
+                  <component id="1cf3a" class="javax.swing.JButton">
+                    <constraints/>
+                    <properties>
+                      <focusable value="false"/>
+                      <text value="+"/>
+                    </properties>
+                  </component>
+                  <component id="c0aa1" class="javax.swing.JButton">
+                    <constraints/>
+                    <properties>
+                      <text value="-"/>
+                    </properties>
+                  </component>
+                  <component id="d7a4f" class="javax.swing.JToolBar$Separator">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                  <component id="647a2" class="javax.swing.JButton">
+                    <constraints/>
+                    <properties>
+                      <focusable value="false"/>
+                      <text value="?"/>
+                    </properties>
+                  </component>
+                </children>
+              </toolbar>
+            </children>
           </grid>
         </children>
       </tabbedpane>
