--- a/src/main/java/Image_Synthesizer.form
+++ b/src/main/java/Image_Synthesizer.form
@@ -624,15 +624,12 @@
                   </hspacer>
                 </children>
               </grid>
-              <component id="d5a4e" class="javax.swing.JTextArea" binding="primitiveTextArea">
+              <component id="5f77b" class="javax.swing.JTextPane" binding="primitiveTextArea">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
-                  </grid>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <font name="Fira Code"/>
-                  <lineWrap value="true"/>
+                  <font name="Source Code Pro"/>
                   <text value=""/>
                 </properties>
               </component>
