--- a/src/main/java/Image_Synthesizer.form
+++ b/src/main/java/Image_Synthesizer.form
@@ -653,7 +653,7 @@
                   </component>
                 </children>
               </toolbar>
-              <grid id="44b6e" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="44b6e" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -663,18 +663,10 @@
                 <children>
                   <component id="5654f" class="javax.swing.JButton" binding="generateFunctionButton" default-binding="true">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Generate"/>
-                    </properties>
-                  </component>
-                  <component id="c3dbe" class="javax.swing.JButton" binding="previewFunctionButton">
-                    <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Update Preview"/>
+                      <text value="Generate"/>
                     </properties>
                   </component>
                   <hspacer id="e4f94">
@@ -796,7 +788,7 @@
                       <grid row="0" column="3" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
-                    <border type="etched"/>
+                    <border type="none"/>
                     <children>
                       <component id="e0436" class="javax.swing.JCheckBox" binding="normalizeCheckBox">
                         <constraints>
@@ -813,10 +805,10 @@
                           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <enabled value="false"/>
                           <focusable value="false"/>
                           <selected value="true"/>
                           <text value="local"/>
+                          <visible value="false"/>
                         </properties>
                       </component>
                       <component id="4b3da" class="javax.swing.JRadioButton" binding="globalRadioButton" default-binding="true">
@@ -824,9 +816,9 @@
                           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <enabled value="false"/>
                           <focusable value="false"/>
                           <text value="global"/>
+                          <visible value="false"/>
                         </properties>
                       </component>
                     </children>
@@ -862,7 +854,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="6b16e" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="6b16e" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -872,18 +864,10 @@
                 <children>
                   <component id="6d286" class="javax.swing.JButton" binding="generatePrimitiveButton">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Generate"/>
-                    </properties>
-                  </component>
-                  <component id="bc293" class="javax.swing.JButton" binding="previewPrimitiveButton">
-                    <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Update Preview"/>
+                      <text value="Generate"/>
                     </properties>
                   </component>
                   <hspacer id="782ca">
