--- a/src/main/java/Image_Synthesizer.form
+++ b/src/main/java/Image_Synthesizer.form
@@ -1046,7 +1046,9 @@
                                 <children>
                                   <component id="60ad5" class="javax.swing.JTextArea" binding="conditionalElseField">
                                     <constraints/>
-                                    <properties/>
+                                    <properties>
+                                      <text value="v=255;"/>
+                                    </properties>
                                   </component>
                                 </children>
                               </scrollpane>
