update interpolate options and current slides label

--- a/src/main/java/Image_Synthesizer.form
+++ b/src/main/java/Image_Synthesizer.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="634" height="776"/>
+      <xy x="20" y="20" width="651" height="776"/>
     </constraints>
     <properties>
       <enabled value="true"/>
@@ -580,17 +580,7 @@
                   <snapToTicks value="true"/>
                 </properties>
               </component>
-              <component id="2bdb8" class="javax.swing.JLabel" binding="currentSliceLabel">
-                <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <focusable value="false"/>
-                  <text value="1"/>
-                  <visible value="false"/>
-                </properties>
-              </component>
-              <grid id="e6edf" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="e6edf" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
@@ -600,7 +590,7 @@
                 <children>
                   <component id="a1101" class="javax.swing.JCheckBox" binding="drawAxesCheckBox">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <focusable value="false"/>
@@ -608,16 +598,32 @@
                       <text value="draw axes"/>
                     </properties>
                   </component>
-                  <component id="2ca43" class="javax.swing.JCheckBox" binding="interpolateCheckBox">
+                  <component id="3b164" class="javax.swing.JComboBox" binding="interpolateComboBox">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <actionCommand value="interpolate"/>
                       <enabled value="true"/>
                       <focusable value="false"/>
-                      <label value="interpolate"/>
-                      <text value="interpolate"/>
+                    </properties>
+                  </component>
+                  <component id="975f" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="interpolate:"/>
+                    </properties>
+                  </component>
+                  <component id="2bdb8" class="javax.swing.JLabel" binding="currentSliceLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <focusable value="false"/>
+                      <text value="slice = 1 | z = 0"/>
+                      <visible value="false"/>
                     </properties>
                   </component>
                 </children>
